--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
     "vue": "^2.5.16",
+    "vue-axios": "^2.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -16,10 +19,10 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.10",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.10",
     "@vue/cli-plugin-typescript": "^3.0.0-beta.10",
-    "@vue/cli-service": "^3.0.0-beta.10",
+    "@vue/cli-service": "^3.0.4",
     "@vue/eslint-config-standard": "^3.0.0-beta.10",
     "@vue/eslint-config-typescript": "^3.0.0-beta.10",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.9.4",
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13"
   },
